<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_green_light"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="RecSports Sign In"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="10dp"
        android:background="#E2EDE9E9"
        android:hint="Username"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        android:background="#E2EDE9E9"
        android:hint="Password"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/registerjumpbutton"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/loginbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="136dp"
        android:backgroundTint="#F40B0B"
        android:text="New User"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="143dp"
        android:backgroundTint="#F40B0B"
        android:minHeight="48dp"
        android:text="Login"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        app:srcCompat="@drawable/usc_icon" />


</RelativeLayout>