<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summary_page_relative_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageviewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-421dp"
        android:contentDescription="@string/usc_map"
        android:src="@drawable/usc_map"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/lyon_button"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="157dp"
        android:backgroundTint="@color/primary_color"
        android:contentDescription="@string/lyon_button"
        android:text="@string/lyon_button"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/village_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="217dp"
        android:backgroundTint="#A62016"
        android:contentDescription="@string/village_button"
        android:text="@string/village_button"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/welcomeusertextview"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="103dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentAppointmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="25dp"
        android:background="#CDC2C2"
        android:text="@string/current_appointments"
        android:textColor="#424242" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="83dp"
        android:layout_height="85dp"
        android:layout_below="@+id/welcomeusertextview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="169dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/setpicbtn"
        android:layout_width="86dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/profilepic"
        android:layout_alignTop="@+id/profilepic"
        android:layout_alignEnd="@+id/profilepic"
        android:layout_alignBottom="@+id/profilepic"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/selectableItemBackground" />

    <Button
        android:id="@+id/summarypagebutton"
        android:layout_width="wrap_content"
        android:layout_height="172dp"
        android:layout_alignStart="@+id/currentAppointmentTextView"
        android:layout_alignTop="@+id/currentAppointmentTextView"
        android:layout_alignEnd="@+id/currentAppointmentTextView"
        android:layout_alignBottom="@+id/currentAppointmentTextView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/selectableItemBackground" />

    <Button
        android:id="@+id/notificationbutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/profilepic"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="116dp"
        android:backgroundTint="@color/primary_color"
        android:text="Notification" />


</RelativeLayout>