<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryPage">

    <TextView
        android:id="@+id/summary_page_title"
        android:layout_width="236dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="649dp"
        android:gravity="center"
        android:text="@string/summary_page"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <LinearLayout
        android:id="@+id/current_appointments_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary_page_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="-620dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="350dp"
        android:background="#CDC2C2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentApptTextviewSummaryPage"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:text="@string/current_appointments"
            android:textColor="#424242"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <ScrollView
            android:id="@+id/current_appointments_list_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/current_appointments_list_scroll_view">

            <LinearLayout
                android:id="@+id/current_appointments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/past_appointments_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="248dp"
        android:layout_below="@id/current_appointments_linear_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="-300dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="51dp"
        android:background="#CDC2C2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pastApptTextviewSummaryPage"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:text="@string/past_appointments"
            android:textColor="#424242"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <ScrollView
            android:id="@+id/past_appointments_list_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/past_appointments_list_scroll_view">

            <LinearLayout
                android:id="@+id/past_appointments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>